templates/zahori-server_template.yaml
---
# Source: zahori-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zahori-server
  name: zahori-server-service
  namespace: zahori
  annotations:
    {}
spec:
  type: ClusterIP
  ports:
  - name: portServer
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: zahori-server
---
# Source: zahori-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zahori-server
  name: zahori-server-deployment
  namespace: zahori
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zahori-server
  strategy: {}
  template:
    metadata:
      annotations:
        {}    
      labels:
        app: zahori-server
    spec:
      containers:
      - env:
        - name: ZAHORI_DB_HOST
          value: zahori-postgresql-service
        - name: ZAHORI_CONSUL_HOST
          value: consul-ui
        - name: ZAHORI_SELENOID_UI_INTERNAL_HOST
          value: moon.moon.svc.cluster.local
        - name: ZAHORI_DB_PASS
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: zahori-server-secret
        image: zahoriaut/zahori-server:0.1.17
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - sleep 10
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /zahori/actuator/health/liveness
            port: 9090
            scheme: HTTP
          initialDelaySeconds: 120
          successThreshold: 1
        name: zahori
        ports:
        - containerPort: 9090
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /zahori/actuator/health/readiness
            port: 9090
            scheme: HTTP
          initialDelaySeconds: 20
          successThreshold: 1
        resources:
          limits:
            cpu: 1000m
            memory: 500Mi
          requests:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - mountPath: /usr/app/evidences
          name: zahori-data
      volumes:
      - name: zahori-data
        persistentVolumeClaim:
          claimName: zahori-server-claim
      - configMap:
          name: zahori-server-scripts
        name: postgres-initdb
status: {}
---
# Source: zahori-server/templates/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zahori-server-traefik
  namespace: zahori
  annotations:
    {}  
spec:
  entryPoints:
  - web
  routes:
      - match: Host(`server.test`) && PathPrefix(`/zahori`)
        kind: Rule
        services:
          - name: zahori-server-service
            port: 9090
